overflow fixed again?

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -28,7 +28,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid white;
   padding: 2px;
   background-color: white;
 }
@@ -39,12 +38,12 @@
 }
 
 .header button {
-  border: 1px solid white;
   background: none;
   color: white;
   font-size: 24px;
+  border: none;
 }
 
 .header button:hover {
-  background-color: rgb(113, 113, 113);
+  font-size: 25px;
 }
