--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
+  width: 100%;
+
 }
 
 #root {
@@ -36,7 +38,8 @@ body,
   margin: 0;
   display: flex;
   flex-direction: column;
-  overflow: scroll;
+  overflow: auto;
+  width: 100vw
 }
 
 @keyframes fadeIn {
